:format format doc

--- a/notice/代码+模块结构.md
+++ b/notice/代码+模块结构.md
@@ -2,9 +2,7 @@
 
 > `nacos` 版本 `1.3.1`
 
-在阅读源码并准备调试之前，建议先 `清理一下不重要的文件和信息`（和源码无关的），笔者清理之后的结构如下：</br></br>
-
-```bash
+在阅读源码并准备调试之前，建议先 `清理一下不重要的文件和信息`（和源码无关的），笔者清理之后的结构如下：</br>```bash
 ➜  nacos git:(feature-1.3.1) tree -L 2
 .
 ├── BUILDING    // 构建说明    
@@ -71,19 +69,13 @@
 
 可以看得出来，现在 `Nacos` 的代码分层、代码结构上都非常的清晰，这也是我说这个项目值得长期关注的原因，感兴趣可以去看下老版本的代码，对比一下！
 
-</br>
-
 ## **项目模块**
 
 > Tips：`example`、`test`、`distribution` 这里接不介绍了，前面两种分别是示例、测试模块，后者是打包后存放打包相关文件的模块
 
-</br>
-
 **补充说明：**`nacos-address` 依赖 `nacos-naming`，但是排除了 `nacos-naming` 中的 `nacos-cmdb` 模块
 
 ![](../images/Nacos各个模块依赖关系.jpg)
-
-</br>
 
 从上面的模块分析中我们可以看出模块的一些端倪：
 
@@ -92,13 +84,9 @@
 
 除此之外，从这张图上你还能挖据出更多信息吗，欢迎一起讨论！
 
-</br>
-
 ## **如何通过工具查看模块依赖关系**
 
 > 这里以 naming 模块为例，实际上就是通过 IDEA 来查看
-
-</br>
 
 **naming 依赖的模块：**
 
@@ -106,9 +94,7 @@
 
 ![](../images/screenshot_1594728814507.png)
 
-</br></br>
-
-**依赖了 Naming 的模块：**
+</br>**依赖了 Naming 的模块：**
 
 > 上面我们知道了 `naming` 依赖了哪些其他模块，那么还有哪些模块一来了 `naming` 模块呢?
 
