:format format doc

--- a/notice/代码分析与统计.md
+++ b/notice/代码分析与统计.md
@@ -2,9 +2,9 @@
 
 阅读源码需要讲策略，不能一股脑儿的就开始去通篇阅读，这样最后可能收效甚微。同样地，阅读源码不可能将所有实现细节都复制粘贴出来讲解
 
-因此，我们需要先分析源码体量，然后再进一步精细化的去选择性阅读！</br>## **代码统计**
+因此，我们需要先分析源码体量，然后再进一步精细化的去选择性阅读！## **代码统计**
 
-因为我们一般只关注与 Java 代码，因此我这里分析时屏蔽了 HTML、CSS、JS 等代码</br>**总体统计：**
+因为我们一般只关注与 Java 代码，因此我这里分析时屏蔽了 HTML、CSS、JS 等代码**总体统计：**
 
 ![](../images/screenshot_1594536336632.png)
 
@@ -22,4 +22,3 @@
 
 ![](../images/screenshot_1594536115608.png)
 
-</br>
