--- a/notice/代码+模块结构.md
+++ b/notice/代码+模块结构.md
@@ -2,7 +2,7 @@
 
 > `nacos` 版本 `1.3.1`
 
-在阅读源码并准备调试之前，建议先 `清理一下不重要的文件和信息`（和源码无关的），笔者清理之后的结构如下：</br>```bash
+在阅读源码并准备调试之前，建议先 `清理一下不重要的文件和信息`（和源码无关的），笔者清理之后的结构如下：```bash
 ➜  nacos git:(feature-1.3.1) tree -L 2
 .
 ├── BUILDING    // 构建说明    
@@ -94,7 +94,7 @@
 
 ![](../images/screenshot_1594728814507.png)
 
-</br>**依赖了 Naming 的模块：**
+**依赖了 Naming 的模块：**
 
 > 上面我们知道了 `naming` 依赖了哪些其他模块，那么还有哪些模块一来了 `naming` 模块呢?
 
@@ -103,4 +103,3 @@ __我们可以在 `IDEA` 中通过 `鼠标右键` - `Analyze` - `Module Dependen
 ![](../images/screenshot_1594539383998.png)
 
 
-</br></br>
