--- a/summary/核心概念.md
+++ b/summary/核心概念.md
@@ -2,7 +2,7 @@
 
 > 本文摘自 Nacos 官网：[Nacos 概念]([https://nacos.io/en-us/docs/concepts.html](https://nacos.io/en-us/docs/concepts.html))
 
-`Nacos` 引入了一些基本的概念，系统性的了解一下这些概念可以帮助您更好的理解和正确的使用 `Nacos` 产品</br>## **地域 Region**
+`Nacos` 引入了一些基本的概念，系统性的了解一下这些概念可以帮助您更好的理解和正确的使用 `Nacos` 产品## **地域 Region**
 
 物理的数据中心，资源创建成功后不能更换。
 
@@ -94,4 +94,3 @@ Nacos数据（如配置和服务）描述信息，如服务版本、权重、容
 
 为了防止因过多实例 (Instance) 不健康导致流量全部流向健康实例 (Instance) ，继而造成流量压力把健康 健康实例 (Instance) 压垮并形成雪崩效应，应将健康保护阈值定义为一个 0 到 1 之间的浮点数。当域名健康实例 (Instance) 占总服务实例 (Instance) 的比例小于该值时，无论实例 (Instance) 是否健康，都会将这个实例 (Instance) 返回给客户端。这样做虽然损失了一部分流量，但是保证了集群的剩余健康实例 (Instance) 能正常工作。
 
-</br></br>
